# another-box

./: .gitignore  README.md  pyproject.toml
src/another_box/: __init__.py  __main__.py  app.py  auto_update.py  configuration.py  errors.py  json_compat.py  logging_config.py  models.py  paths.py  processes.py  single_instance.py  storage.py  subscriptions.py
src/another_box/ui/: dialogs.py  elided_label.py  main_window.py  profile_card.py  sizing.py  styles.py  windows.py  workers.py
tests/: conftest.py  test_auto_update.py  test_configuration.py  test_http_client.py  test_json_compat.py  test_logging.py  test_processes.py  test_storage.py  test_subscriptions.py  test_ui.py
