[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "another-box"
version = "0.1.0"
description = "Minimal Windows GUI for sing-box subscription profiles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8,<7",
    "httpx>=0.27,<1",
    "platformdirs>=4.3,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-qt>=4.4,<5",
]

[project.scripts]
another-box = "another_box.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/another_box"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
qt_api = "pyside6"
pythonpath = ["src"]
